# keypal

./: package.json
dist-isolation/: index.html  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/data/: mod.rs
src-tauri/src/data/entities/: keys.rs  mod.rs  prelude.rs
src-tauri/src/data/migrator/: m20220927_000001_create_keys_table.rs  mod.rs
